examples/test/testpolicy11342.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11342
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key10: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value34
          key25: value48
          key33: value17
      podSelector:
        matchLabels:
          key26: value16
          key8: value23
          key9: value20
